--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -300,21 +300,24 @@ footer {
   cursor: pointer;
 }
 
-#signup-form {
+#signup-form, #login-form {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
 #signup-form input,
-#signup-form button {
+#signup-form button,
+#login-form input,
+#login-form button {
   padding: 10px;
   font-size: 16px;
   border-radius: 4px;
   border: 1px solid #ddd;
 }
 
-#signup-form button {
+#signup-form button,
+#login-form button {
   background-color: var(--primary-color);
   color: white;
   border: none;
@@ -322,6 +325,7 @@ footer {
   transition: background-color 0.3s ease;
 }
 
-#signup-form button:hover {
+#signup-form button:hover,
+#login-form button:hover {
   background-color: var(--secondary-color);
 }
