--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -244,7 +244,7 @@
       });
     </script>
     <footer>
-      <p>&copy; 2024 Bible Trivia. All rights reserved.</p>
+      <p>2024 Bible Trivia | Made By Preston Fournier</p>
     </footer>
   </body>
 </html>
