Basic working trivia

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -134,7 +134,7 @@
           <div class="cta-box">
             <h2>Just Want to Play?</h2>
             <p>Start a quick game with random questions!</p>
-            <%= link_to 'Play Now', '#', class: 'button accent-button' %>
+            <%= link_to 'Play Now', play_game_path, class: 'button accent-button' %>
           </div>
         </div>
         <div class="features-container">
