--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -1,15 +1,14 @@
 <div class="game-container">
   <%= render 'shared/flash_messages' %>
-  <h1>Bible Trivia</h1>
   <div class="question-card">
-    <h2><%= @question.content %></h2>
-    <%= form_with url: answer_game_path, method: :post, local: true do |f| %>
+    <h2 class="question-text"><%= @question.content %></h2>
+    <%= form_with url: answer_game_path, method: :post, local: true, class: 'answer-form' do |f| %>
       <%= f.hidden_field :question_id, value: @question.id %>
       <div class="answers">
         <% @question.answers.shuffle.each do |answer| %>
           <div class="answer">
-            <%= f.radio_button :answer_id, answer.id %>
-            <%= f.label "answer_id_#{answer.id}", answer.content %>
+            <%= f.radio_button :answer_id, answer.id, class: 'answer-input' %>
+            <%= f.label "answer_id_#{answer.id}", answer.content, class: 'answer-label' %>
           </div>
         <% end %>
       </div>
