--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -5,10 +5,13 @@
     <%= form_with url: answer_game_path, method: :post, local: true, class: 'answer-form' do |f| %>
       <%= f.hidden_field :question_id, value: @question.id %>
       <div class="answers">
-        <% @question.answers.shuffle.each do |answer| %>
+        <% @question.answers.shuffle.each_with_index do |answer, index| %>
           <div class="answer">
             <%= f.radio_button :answer_id, answer.id, class: 'answer-input' %>
-            <%= f.label "answer_id_#{answer.id}", answer.content, class: 'answer-label' %>
+            <%= f.label "answer_id_#{answer.id}", class: 'answer-label' do %>
+              <span class="answer-letter"><%= ('A'..'D').to_a[index] %></span>
+              <span class="answer-text"><%= answer.content %></span>
+            <% end %>
           </div>
         <% end %>
       </div>
