--- a/app/views/layouts/game.html.erb
+++ b/app/views/layouts/game.html.erb
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
   </head>
-  <body>
+  <body class="<%= @body_class %>">
     <%= render 'shared/header' %>
     <%= yield %>
     <%= render 'shared/footer' %>
