--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,17 @@
-<header>
-  <nav>
-    <%= link_to 'Home', root_path, class: 'nav-link' %>
-    <%= link_to 'Categories', categories_path, class: 'nav-link' %>
-    <%= link_to 'Questions', questions_path, class: 'nav-link' %>
-    <%= link_to 'Play', play_game_path %>
-  </nav>
+<header class="site-header">
+  <div class="header-container">
+    <%= link_to root_path, class: "logo" do %>
+      <span class="logo-text">Bible Trivia</span>
+    <% end %>
+    <nav class="main-nav">
+      <% unless current_page?(root_path) %>
+        <%= link_to 'Home', root_path, class: 'nav-link' %>
+      <% end %>
+      <%= link_to 'Categories', categories_path, class: 'nav-link' %>
+      <%= link_to 'Questions', questions_path, class: 'nav-link' %>
+      <% unless current_page?(play_game_path) %>
+        <%= link_to 'Play', play_game_path, class: 'nav-link play-button' %>
+      <% end %>
+    </nav>
+  </div>
 </header>
