--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -3,20 +3,39 @@
     <h1 class="game-title">Bible Trivia</h1>
     <div class="question-card">
       <h2 class="question-text"><%= @question.content %></h2>
-      <%= form_with url: answer_game_path, method: :post, local: true, class: 'answer-form' do |f| %>
-        <%= f.hidden_field :question_id, value: @question.id %>
+      <% if @selected_answer %>
         <div class="answers">
           <% @question.answers.shuffle.each_with_index do |answer, index| %>
-            <div class="answer">
-              <%= f.radio_button :answer_id, answer.id, class: 'answer-input' %>
-              <%= f.label "answer_id_#{answer.id}", class: 'answer-label' do %>
-                <span class="answer-letter"><%= ('A'..'D').to_a[index] %></span>
-                <span class="answer-text"><%= answer.content %></span>
-              <% end %>
+            <div class="answer <%= 'correct' if answer.correct %> <%= 'selected' if answer == @selected_answer %>">
+              <span class="answer-letter"><%= ('A'..'D').to_a[index] %></span>
+              <span class="answer-text"><%= answer.content %></span>
             </div>
           <% end %>
         </div>
-        <%= f.submit "Submit Answer", class: "submit-button" %>
+        <div class="result-message">
+          <% if @selected_answer.correct %>
+            <p class="correct">Correct!</p>
+          <% else %>
+            <p class="incorrect">Incorrect.</p>
+          <% end %>
+        </div>
+        <%= button_to "Next Question", play_game_path, method: :get, class: "submit-button next-question" %>
+      <% else %>
+        <%= form_with url: answer_game_path, method: :post, local: true, class: 'answer-form' do |f| %>
+          <%= f.hidden_field :question_id, value: @question.id %>
+          <div class="answers">
+            <% @question.answers.shuffle.each_with_index do |answer, index| %>
+              <div class="answer">
+                <%= f.radio_button :answer_id, answer.id, class: 'answer-input' %>
+                <%= f.label "answer_id_#{answer.id}", class: 'answer-label' do %>
+                  <span class="answer-letter"><%= ('A'..'D').to_a[index] %></span>
+                  <span class="answer-text"><%= answer.content %></span>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+          <%= f.submit "Submit Answer", class: "submit-button" %>
+        <% end %>
       <% end %>
     </div>
   </div>
